# MRA-TTG

./: CMakeLists.txt  LICENSE
.github/workflows/: mra-cmake.yaml  mra-cuda.yaml  mra-device.yaml  mra-hip.yaml  mra-host.yaml
cmake/modules/: FindOrFetchCUBLASDX.cmake  FindOrFetchMADNESS.cmake  FindOrFetchTTG.cmake
include/mra/: mra.h  tasks.h
include/mra/functors/: gaussian.h
include/mra/kernels/: compress.h  convolution.h  derivative.h  fcoeffs.h  fcube_for_mul.h  kernel_state.h  multiply.h  reconstruct.h  transform.h  transform_cublasdx.h
include/mra/misc/: adquad.h  allocator.h  autocorr.h  batching.h  cache.h  convolutiondata.h  dims.h  domain.h  functiondata.h  functionset.h  hash.h  key.h  keymaps.h  options.h  platform.h  types.h
include/mra/ops/: inner.h  mxm.h  mxm_cublasdx.h
include/mra/tasks/: common.h  compress.h  derivative.h  extract.h  gaxpy.h  multiply.h  norm.h  project.h  reconstruct.h
include/mra/tensor/: cycledim.h  functionnode.h  functionnorm.h  tensor.h  tensoriter.h  tensorview.h
src/: CMakeLists.txt  autocorr.cc
src/benchmarks/transformbench/: transformbench.cc  transformbench.cu
src/examples/derivative/: bench_derivative.cc  bench_derivative.hip  bench_mad_derivative.cc  test_derivative.cc
src/examples/pcr/: test_pcr.cc  test_pcr_madness.cc
src/examples/unit/: test_unit.cc
src/kernels/: compress.cc  compress.cu  derivative.cc  derivative.hip  multiply.cc  multiply.hip  reconstruct.cc  reconstruct.hip
src/tests/: mad_derivative_test.cc  mad_derivative_test.cu  mxm_test.cu  trmat_test.cc
